--- a/4.background/background.css
+++ b/4.background/background.css
@@ -5,7 +5,9 @@
 
 body {
     background-image: url('/_img/rollsroyce_black.jpg');
+    /* background-size: 100% 100vh; */
     background-size: cover;
+    /* background-position: right bottom; */
     background-repeat: no-repeat;
     /* background-repeat: repeat; */
     /* background-repeat: repeat-x; */
