--- a/4.background/background.css
+++ b/4.background/background.css
@@ -6,6 +6,8 @@
 body {
     background-image: url('/_img/rollsroyce_black.jpg');
     /* background-size: 100% 100vh; */
+    /* background-size: auto; Nilai auto akan menghasilkan ukuran otomatis */
+    /* background-size: cover; Nilai cover akan menghasilkan ukuran penuh (hanya lebarnya saja) */
     background-size: cover;
     /* background-position: right bottom; */
     background-repeat: no-repeat;
