--- a/46.display/style.css
+++ b/46.display/style.css
@@ -22,3 +22,19 @@ inline-block    : Gabungan dari sifat inline dan block, sifat akan sama seperti 
 .inline-block {
     display: inline-block;
 }
+
+/* 
+
+Property visibility pada CSS berfungsi untuk menyembunyikan dan menampilkan suatu elemen di web browser (dari pandangan user). visibility: hidden; dan display: none; sama-sama menyembunyikan elemen, namun kalau visibility: hidden; meninggalkan jejak sedangkan display: none; tidak meninggalkan jejak.
+
+*/
+
+.terlihat {
+    visibility: visible;
+}
+.tidak-terlihat {
+    visibility: hidden;
+}
+.tidak-terlihat-untuk-tabel {
+    visibility: collapse;
+}
