--- a/25.overflow/overflow.css
+++ b/25.overflow/overflow.css
@@ -1,3 +1,12 @@
+/* 
+Property overflow pada CSS berguna untuk mengatur konten jika melebihi batas yang sudah di tentukan atau konten yang sudah melebihi parent element nya. Property overflow pada CSS memiliki 4 isi (value) dengan fungsi yang berbeda tentunya.
+
+visible : Konten masih terlihat meski melewati batas parent nya.
+hidden  : Konten yang melebihi parent nya akan disembunyikan.
+scroll  : Konten yang melebihi parent nya akan disembunyikan. Tetapi kalian masih bisa melihat seluruh kontennya dengan menggerakan scroll bar.
+auto    : Konten yang melebihi parent nya akan disembunyikan dengan scroll dan tanpa scroll.
+*/
+
 * {
     cursor: progress;
     margin: 0;
