--- a/30.opacity/opacity.css
+++ b/30.opacity/opacity.css
@@ -1,14 +1,24 @@
+/* 
+Property opacity pada CSS berfungsi untuk mengatur transparasi element apapun pada CSS.
+
+Agar property opacity berfungsi di semua versi Internet Explorer, gunakan filter: alpha(opacity=?); bersama dengan property opacity. ? berupa nilai dari 0 hingga 100. Nilai 0 menghasilkan element yang sepenuhnya transparan (100% transparan), sedangkan nilai 100 membuat element tersebut jelas (seperti bawaannya).
+*/
+
 * {
     font-family: 'Montserrat';
     box-sizing: border-box;
 }
 
-img {
-    opacity: 0.2;
+.kosong {
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    opacity: .2;
+    filter: alpha(opacity=100);
     transition: .5s ease-in-out;
 }
 
-img:hover {
+.kosong:hover {
     opacity: 1;
-    border-radius: 40px;
+    border-radius: 100%;
 }
