--- a/16.transition/transition.css
+++ b/16.transition/transition.css
@@ -1,5 +1,11 @@
 /* 
 CSS transisi (CSS transition) adalah efek transisi yang memungkinkan sebuah element secara bertahap berubah dari satu gaya ke gaya yang lain. Banyak sekali contoh pengaplikasian efek transisi pada kehidupan sehari-hari, misalnya saja ketika kalian membuat materi presentasi dengan powerpoint, pasti tidak akan lepas dengan animasi-animasi dan efek transisi untuk mempercantik tampilan slidenya.
+
+Property transition-duration : berfungsi untuk mengatur durasi transisi.
+
+Property transition-timing-function : berfungsi untuk mengatur timing transisi (bukan durasi transisi), silahkan klik disini untuk live preview.
+
+Property transition-delay : berfungsi untuk mengatur delay sebelum transisi dijalankan atau dieksekusi.
 */
 
 * {
@@ -44,13 +50,12 @@ CSS transisi (CSS transition) adalah efek transisi yang memungkinkan sebuah elem
     background-color: royalblue;
     width: 50px;
     height: 50px;
-    transition: width 10s, height 10s, transform 5s;
-    transition-timing-function: ease-in-out;
-    transition-delay: 2s;
+    transition: 5s;
+    transition-timing-function: linear;
+    transition-delay: .5s;
 }
 .royalblue:hover {
     width: 300px;
     height: 300px;
     transform: rotate(180deg);
-    transition: width 10s, height 10s, transform 5s;
 }
