Menambahkan file transform.html

--- a/40.transforms/2d.css
+++ b/40.transforms/2d.css
@@ -65,6 +65,7 @@
     transition: .5s ease-in-out;
 }
 .bbmgratis:hover {
+    /* transform: matrix(scaleX(), skewY(), skewX(), scaleY(), translateX(), translateY()); */
     transform: matrix(1, 0, 0.5, 1, 150, 0);
     background-color: pink;
     color: white;
