Menghapus 1 file fosize.html dan merubah beberapa code

--- a/1.font/font.css
+++ b/1.font/font.css
@@ -9,3 +9,39 @@ h1 {
     font-weight: bold; /*tebal font*/
     font-style: italic; /*gaya pada font*/
 }
+
+.font-xx-small {
+    font-size: xx-small;
+}
+
+.font-x-small {
+    font-size: x-small;
+}
+
+.font-small {
+    font-size: small;
+}
+
+.font-medium {
+    font-size: medium;
+}
+
+.font-large {
+    font-size: large;
+}
+
+.font-x-large {
+    font-size: x-large;
+}
+
+.font-xx-large {
+    font-size: xx-large;
+}
+
+.font-20-px {
+    font-size: 20px;
+}
+
+.font-150-persen {
+    font-size: 150%;
+}
