Menambahkan folder baru 04. Background Color

--- a/style.css
+++ b/style.css
@@ -1,85 +1,6 @@
 /* 
-
+### CATATAN ###
 Cascading Style Sheets (CSS) merupakan aturan untuk mengatur beberapa komponen dalam sebuah website sehingga akan lebih terstruktur dan seragam. CSS bukan merupakan bahasa pemrograman.
 
 CSS dapat mengendalikan (mengatur) ukuran gambar, warna teks, warna tabel, ukuran border, warna border, warna hyperlink, warna mouse over, mengatur spasi antar paragraf, mengatur spasi antar teks, mengatur margin kiri, kanan, atas, bawah, dan parameter lainnya. CSS adalah bahasa style sheets yang digunakan untuk mengatur tampilan dokumen.
-
-
-
-Macam-Macam Penulisan Selector CSS
-
-🔵Selector ⚪Contoh 🟡Penjelasan
-
-🔵 .class
-⚪ .contoh
-🟡 Pilih semua element dengan class="contoh"
-
-🔵 .class1.class2
-⚪ .nama-depan.nama-belakang
-🟡 Pilih semua element dengan class="nama-depan nama-belakang"
-
-🔵 .class1 .class2
-⚪ .nama-lengkap .nama-panggilan
-🟡 Pilih semua element dengan class="nama-panggilan" yang merupakan turunan dari element dengan class="nama-lengkap"
-
-🔵 #id
-⚪ #contoh
-🟡 Pilih semua element dengan id="contoh"
-
-🔵 *
-⚪ *
-🟡 Pilih semua element
-
-🔵 element
-⚪ p
-🟡 Pilih semua element "p"
-
-🔵 element, element
-⚪ div, p
-🟡 Pilih semua element div dan semua element p
-
-🔵 element element
-⚪ div p
-🟡 Pilih semua element p yang ada di dalam element div
-
-🔵 element > element
-⚪ div > p
-🟡 Pilih semua element p yang orang tuanya adalah element div
-
-🔵 element + element
-⚪ div + p
-🟡 Pilih semua element p yang ditempatkan setelah element div
-
-🔵 element ~ element
-⚪ p ~ ul
-🟡 Pilih setiap element ul yang didahului oleh elemen p
-
-🔵 [attribute]
-⚪ [target]
-🟡 Pilih semua element yang mempunyai atribut target
-
-🔵 [attribute=value]
-⚪ [target=_blank]
-🟡 Pilih semua element dengan target="_blank"
-
-🔵 [attribute~=value]
-⚪ [title~=bunga]
-🟡 Pilih semua element dengan atribut title yang mengandung kata bunga
-
-🔵 [attribute|=value]
-⚪ [lang|=en]
-🟡 Pilih semua element dengan atribut lang yang diawali dengan en
-
-🔵 [attribute^=value]
-⚪ a[href^="https"]
-🟡 Pilih semua element a yang nilai atribut hrefnya dimulai dengan https
-
-🔵 [attribute$=value]
-⚪ a[href$=".pdf"]
-🟡 Pilih semua element a yang nilai atribut hrefnya diakhiri dengan .pdf
-
-🔵 [attribute*=value]
-⚪ a[href*="alwaysngoding"]
-🟡 Pilih semua element a yang nilai atribut hrefnya mengandung substring alwaysngoding
-
 */
