--- a/11. Z-Index/style.css
+++ b/11. Z-Index/style.css
@@ -17,6 +17,8 @@ div {
     Properti ini mengontrol urutan tumpukan elemen yang diposisikan secara absolute, relative, atau fixed.
     Menentukan lapisan elemen di halaman. Elemen dengan nilai z-index lebih tinggi akan berada di depan elemen dengan nilai lebih rendah.
 
+    Property z-index pada CSS berkaitan dengan tumpuk menumpuk (tumpukan), sama halnya layer pada aplikasi Photoshop, semakin tinggi isi atau valuenya maka index nya semakin besar.
+
     Value z-index: 
     - Angka positif atau negatif yang menentukan urutan tumpukan (elemen dengan nilai lebih tinggi akan berada di atas elemen lain).
     */
