Menambahkan banyak folder baru

--- a/01. Selector/style.css
+++ b/01. Selector/style.css
@@ -5,6 +5,11 @@
 - Untuk menseleksi id, gunakan "#" lalu diikuti dengan nama id-nya
 */
 
+/* Selector Global */
+* {
+    background-color: black;
+}
+
 /* Selector Tag */
 p {
     font-family: 'Arial';
