Menambahkan catatan pada folder 20. Filter

--- a/20. Filter/style.css
+++ b/20. Filter/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+/*
+filter: ;
+Untuk menerapkan efek visual seperti blur, grayscale, kontras, saturasi, dan lain-lain pada elemen HTML.
+*/
 .blur {
     filter: blur(5px);
 }
